--- a/challenge_3/package.json
+++ b/challenge_3/package.json
@@ -14,7 +14,8 @@
     "babel-preset-react": "^6.24.1",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "mysql": "^2.16.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.8"
